# Auth_sprint_2

./: .env.sample  README.md  docker-compose.yml  env_sample  pyproject.toml  requirements.txt
.github/workflows/: code-checker.yaml
auth-flask-solution/: Dockerfile  requirements.txt
auth-flask-solution/src/: decorators.py  main.py  main_sync.py
auth-flask-solution/src/core/: app_factory.py  cache.py  commands.py  jwt.py  limiter.py  oauth.py  settings.py  tracer.py
auth-flask-solution/src/db/: cache.py  db_factory.py  redis.py
auth-flask-solution/src/models/: db_models.py  general.py
auth-flask-solution/src/services/: auth.py  cache.py  json.py  roles.py  utils.py
fastapi-solution/: requirements.txt
fastapi-solution/src/: main.py
fastapi-solution/src/api/: __init__.py
fastapi-solution/src/core/: config.py  mapping.py  middleware.py  utils.py
fastapi-solution/src/db/: cache.py  elastic.py  redis.py  search_engine.py
fastapi-solution/src/models/: common.py  general.py
fastapi-solution/src/services/: __init__.py  cache.py  films.py  genres.py  persons.py  search_engine.py
nginx/: default.conf  nginx.conf
tests/functional/: Dockerfile  __init__.py  conftest.py  docker-compose.yaml  logger.py  requirements.txt  settings.py
tests/functional/src/: __init__.py  test_account_history.py  test_change_password.py  test_login.py  test_logout.py  test_protected.py  test_refresh.py  test_registration.py  test_roles.py  test_update_user_data.py
tests/functional/testdata/: account_history.py  generate_tokens.py  login.py  logout.py  postgresdata.py  (+6 more)
(+34 files in other folders)
