[tool.poetry]
name = "auth-flask-solution"
version = "0.1.0"
description = ""
authors = ["Elizaveta Tishkovets <etishkovec@ubic.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
Flask = "^2.2.2"
Flask-JWT-Extended = "^4.4.4"
Flask-Security = "^3.0.0"
flasgger = "^0.9.5"
flask-marshmallow = "^0.14.0"
gevent = "^22.10.1"
Flask-Pydantic = "^0.11.0"
uvicorn = "^0.19.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
flask-sqlalchemy = "^3.0.2"
psycopg2 = "^2.9.4"
aioredis = "^2.0.1"
httpx = "^0.23.0"
Werkzeug = "^2.2.2"
email-validator = "^1.3.0"
redis = "^4.3.4"
orjson = "^3.8.1"
flask-caching = "^2.0.1"
flask-migrate = "^3.1.0"
google-auth-oauthlib = "^0.7.1"
authlib = "^1.1.0"
flask-limiter = {extras = ["redis"], version = "^2.7.0"}
opentelemetry-api = "^1.14.0"
opentelemetry-sdk = "^1.14.0"
opentelemetry-instrumentation-flask = "^0.35b0"
opentelemetry-exporter-jaeger = "^1.14.0"
setuptools = "^65.5.1"
wheel = "^0.38.4"


[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
